# Syncronizator

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
syncronizer/: run.py  syncronizer.py  utils.py  worker.py
