[metadata]
name = syncronizer
author = Timur
author_email = timur.fattahov1996@gmail.com
description = Syncronizer for Google Drive
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
python_requires = <=3.9.*
packages = find:
install_requires =
    google-api-core==2.8.2
    google-api-python-client==2.54.0
    google-auth-httplib2==0.1.0
    google-auth-oauthlib==0.5.2
    google-auth==2.9.1
    googleapis-common-protos==1.56.4
    protobuf==4.21.3
    requests-oauthlib==1.3.1
    requests==2.28.1

# [options.entry_points]
# console_scripts =
#     sync = syncronizer.cli.main:main